<resources>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="zoobe_info_screentitle">Info</string>
    <string name="zoobe_shop_screentitle">Shop</string>
    <string name="zoobe_shop_settings_screentitle">Settings</string>
    <string name="zoobe_action_close_title">Back to Chat</string>
    <string name="zoobe_action_shop_settings_title">Settings</string>
    <string name="pref_popup_enabled_key">popup_enabled</string>
    <string name="pref_popup_enabled_default">true</string>
    <string name="pref_show_preview_key">show_preview</string>
    <string name="pref_show_preview_default">true</string>
    <string name="pref_contact_joined_viber_key">contact_joined_viber</string>
    <string name="pref_contact_joined_viber_default">true</string>
    <string name="pref_unlock_screen_for_popup_key">unlock_screen_for_popup</string>
    <string name="pref_unlock_screen_for_popup_default">true</string>
    <string name="pref_light_up_screen_key">light_up_screen</string>
    <string name="pref_light_up_screen_default">true</string>
    <string name="pref_contact_show_all_key">contact_show_all</string>
    <string name="pref_contact_show_all_default">true</string>
    <string name="pref_account_and_sync_key">account_and_sync</string>
    <string name="pref_account_and_sync_default">true</string>
    <string name="pref_notification_icon_key">notification_icon</string>
    <string name="pref_notification_icon_default">false</string>
    <string name="pref_pixie_mode_key">pixie_settings_obsolete</string>
    <string name="pref_language_key">pref_language</string>
    <string name="pref_language_default">true</string>
    <string name="pref_last_online_key">pref_last_online_key</string>
    <string name="pref_last_online_default">true</string>
    <string name="pref_read_status_key">pref_read_status_key</string>
    <string name="pref_read_status_default">true</string>
    <string name="pref_ptt_forceclean_key">pref_ptt_forceclean_key</string>
    <string name="pref_ptt_autoclean_key">pref_ptt_autoclean_key</string>
    <string name="pref_auto_receive_photos_key">pref_auto_receive_photos_key</string>
    <string name="pref_auto_receive_photos_default">true</string>
    <string name="pref_auto_receive_videos_key">pref_auto_receive_videos_key</string>
    <string name="pref_auto_receive_videos_default">false</string>
    <string name="pref_google_analytics_key">pref_google_analytics_key</string>
    <string name="pref_google_analytics_default">true</string>
    <string name="pref_viber_calls_in_key">pref_viber_calls_in_key</string>
    <string name="pref_viber_calls_in_default">true</string>
    <string name="pref_secure_calls_clear_trusted">pref_secure_calls_clear_trusted</string>
    <string name="pref_clear_msg_history_key">pref_clear_msg_history_key</string>
    <string name="pref_email_msg_history_key">pref_email_msg_history_key</string>
    <string name="pref_use_viber_for_sms_key">pref_use_viber_for_sms_key</string>
    <string name="pref_facebook_connect_key">pref_facebook_connect_key</string>
    <string name="pref_twitter_connect_key">pref_twitter_connect_key</string>
    <string name="pref_block_list_key">pref_block_list_key</string>
    <string name="pref_use_system_ringtone_key">use_system_ringtone</string>
    <string name="pref_use_system_ringtone_default">false</string>
    <string name="pref_outgoing_messages_sounds_key">outgoing_messages_sounds</string>
    <string name="pref_outgoing_messages_sounds_default">true</string>
    <string name="pref_call_ringtone_key">call_ringtone</string>
    <string name="pref_notification_sound_key">notification_sound</string>
    <string name="pref_vibrate_when_ringing_key">vibrate_when_ringing</string>
    <string name="pref_vibrate_when_ringing_default">true</string>
    <string name="pref_privacy_policy_key">pref_privacy_policy_key</string>
    <string name="pref_deactivate_key">pref_deactivate_key</string>
    <string name="pref_chat_head_enabled_key">chat_head_enabled</string>
    <string name="pref_chat_head_enabled_default">true</string>
    <string name="menu_add">Add</string>
    <string name="menu_add_to_fav">Add to Favorite</string>
    <string name="menu_search">Search</string>
    <string name="menu_contact_edit">Edit</string>
    <string name="menu_contact_share">Share</string>
    <string name="menu_view_image_facebook">Share on Facebook</string>
    <string name="menu_view_image_c_background">Use as Background</string>
    <string name="btn_msg_compose">Compose</string>
    <string name="btn_msg_delete">Delete</string>
    <string name="messages_edit_header">Edit Messages</string>
    <string name="dialog_sync_accounts_enable_title">Sync contacts</string>
    <string name="menu_message_copy">Copy</string>
    <string name="menu_message_view">View</string>
    <string name="pref_enabled_title">New Message Popup</string>
    <string name="pref_light_up_screen_title">Light screen for messages</string>
    <string name="pref_light_up_screen_on">The screen will light up for incoming messages</string>
    <string name="pref_light_up_screen_off">The screen will not light up for incoming messages</string>
    <string name="pref_contact_joined">Contact Joined Viber</string>
    <string name="pref_contact_joined_on">Get notified when someone from your contacts has joined Viber</string>
    <string name="pref_unlock_screen">Unlock for popups</string>
    <string name="pref_unlock_screen_on">Popup will unlock the screen</string>
    <string name="pref_unlock_screen_off">Popup will keep the screen locked</string>
    <string name="pref_account_and_sync_on">"Add Viber contacts to your device's contacts"</string>
    <string name="pref_account_and_sync_off">"Add Viber contacts to your device's contacts"</string>
    <string name="pref_contact_show_all">Show all contacts</string>
    <string name="pref_show_preview">Show message preview</string>
    <string name="pref_show_preview_on">On</string>
    <string name="pref_show_preview_off">Off</string>
    <string name="pref_language">Show translation</string>
    <string name="pref_language_summary_on">"The device's language is being used"</string>
    <string name="pref_language_summary_off">English is being used</string>
    <string name="pref_last_online">"Share 'Online' Status"</string>
    <string name="pref_last_online_summary_on">You can change this setting once every 24 hours.</string>
    <string name="pref_auto_receive_photo">Auto download photos on 3G</string>
    <string name="pref_auto_receive_videos">Auto download videos on 3G</string>
    <string name="menu_map_send_mail">Send by email</string>
    <string name="menu_map_forward">Forward via Viber</string>
    <string name="set_as_lock_screen">Lock Screen</string>
    <string name="set_as_home_screen">Home Screen</string>
    <string name="add_to_contacts">Add</string>
    <string name="conversation_info_title">Info</string>
    <string name="statistic_net_category_title">Viber Voice Network Statistic</string>
    <string name="statistic_msg_category_title">Messages</string>
    <string name="statistic_3g_title">3G</string>
    <string name="statistic_wifi_title">WiFi</string>
    <string name="statistic_msg_sent_title">Sent</string>
    <string name="statistic_msg_received_title">Received</string>
    <string name="menu_free_call">Free Call</string>
    <string name="menu_viber_out_call">Viber Out call</string>
    <string name="pref_notification_icon_2_1_5">Show Viber status icon</string>
    <string name="pref_pixie_mode_title">Enhance Connectivity</string>
    <string name="pref_pixie_mode_summary">Keep Viber connected in unstable or blocked networks. \"Auto\" is recommended</string>
    <string name="sms_reply_settings_text">Free reply with Viber</string>
    <string name="sms_reply_settings_sub_text">When possible, use Viber for SMS replies</string>
    <string name="pref_email_msg_history_title">Email message history</string>
    <string name="pref_video_calls_title">Video calls</string>
    <string name="pref_twitter_connect_title">Twitter connect</string>
    <string name="menu_share_on_twitter">Share on Twitter</string>
    <string name="pref_more_tab_deactivate_account_title">Deactivate Account</string>
    <string name="pref_clear_msg_history_title">Clear message history</string>
    <string name="pref_facebook_connect_title">Facebook connect</string>
    <string name="pref_viber_in_calls_title">Viber-In Calls</string>
    <string name="pref_viber_in_calls_description">"Receive regular incoming calls with Viber when possible
&lt;br>&lt;a href=\"viber://viber.com/howto/Viber_in\">Learn More&lt;/a>"</string>
    <string name="pref_google_analytics_title">Collect Analytics Data</string>
    <string name="pref_google_analytics_summary">The data is being collected anonymously to help us improve Viber.</string>
    <string name="pref_use_system_ringtone">Use system sounds</string>
    <string name="pref_outgoing_messages_sounds">Outgoing messages sounds</string>
    <string name="pref_call_ringtone">Call ringtone</string>
    <string name="pref_notification_sound">Notification sound</string>
    <string name="pref_vibrate_when_ringing">Vibrate when ringing</string>
    <string name="more_options">More options</string>
    <string name="done">Done</string>
    <string name="menu_save_to_gallery">Save to Gallery</string>
    <string name="menu_get_sticker">Get it</string>
    <string name="pref_read_status">"Send 'Seen' Status"</string>
    <string name="pref_read_status_summary">"Turning this setting off will hide others 'Seen' status from you"</string>
    <string name="pref_ptt_forceclean">Delete voice messages</string>
    <string name="pref_ptt_forceclean_summary">"This will delete all your Viber voice messages from your device's memory. Related messages will not be removed."</string>
    <string name="pref_ptt_autoclean">Delete old Voice messages</string>
    <string name="pref_ptt_autoclean_summary">When ON, old Voice message files will be deleted automatically to reduce memory usage</string>
    <string name="menu_doodle_it">Doodle on this photo</string>
    <string name="block">Block</string>
    <string name="block_list">Block List</string>
    <string name="btn_msg_compose_group">Create group</string>
    <string name="pref_chat_head">Chat head</string>
    <string name="pop_to_chat_head">Pop to chat head</string>
    <string name="secure_call_pref_clear_trusted">Clear trusted devices</string>
    <string name="secure_call_pref_clear_trusted_description">"Selecting this option will clear the list of trusted devices.
Trusted lists for Viber on your other devices will not be affected."</string>
    <string name="public_group_info_data_description_about">ABOUT</string>
    <string name="public_group_info_data_description_tags">TAGS</string>
    <string name="public_group_info_data_description_participants">PARTICIPANTS</string>
    <string name="public_group_info_data_description_name_your_vibe_mandatory">NAME*</string>
    <string name="public_group_info_data_description_location_mandatory">LOCATION*</string>
    <string name="public_group_info_data_description_id_mandatory">ID*</string>
    <string name="public_group_info_data_add_icon_mandatory_caption">Add Icon</string>
    <string name="public_group_info_data_description_background_image">BACKGROUND IMAGE</string>
    <string name="name_your_vibe_hint">Name your Public Chat</string>
    <string name="tags_vibe_hint">Set up to 20 tags</string>
    <string name="about_vibe_hint">Describe Your Public Chat</string>
    <string name="add_vibe_location_hint">Getting your location…</string>
    <string name="vibe_id_hint">Select unique ID</string>
    <string name="vibe_background_hint">Background Image</string>
    <string name="pref_more_tab_privacy_policy_title">Privacy Policy</string>
</resources>