<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:cacheColorHint="#00000000"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:layout="@layout/_ics_custom_checkbox_preference_layout" android:title="@string/pref_chat_head" android:key="@string/pref_chat_head_enabled_key" android:defaultValue="@string/pref_chat_head_enabled_default" android:summaryOn="@string/pref_show_preview_on" android:summaryOff="@string/pref_show_preview_off" />
    <CheckBoxPreference android:layout="@layout/_ics_custom_checkbox_preference_layout" android:title="@string/pref_show_preview" android:key="@string/pref_show_preview_key" android:defaultValue="@string/pref_show_preview_default" />
    <CheckBoxPreference android:layout="@layout/_ics_custom_checkbox_preference_layout" android:title="@string/pref_contact_joined" android:key="@string/pref_contact_joined_viber_key" android:summary="@string/pref_contact_joined_on" android:defaultValue="@string/pref_contact_joined_viber_default" />
    <CheckBoxPreference android:textAppearance="?android:textAppearanceSmall" android:ellipsize="end" android:layout="@layout/_ics_custom_checkbox_preference_layout" android:title="@string/pref_enabled_title" android:key="@string/pref_popup_enabled_key" android:defaultValue="@string/pref_popup_enabled_default" />
    <CheckBoxPreference android:textAppearance="?android:textAppearanceSmall" android:ellipsize="end" android:layout="@layout/_ics_custom_checkbox_preference_layout" android:title="@string/pref_light_up_screen_title" android:key="@string/pref_light_up_screen_key" android:defaultValue="@string/pref_light_up_screen_default" android:summaryOn="@string/pref_light_up_screen_on" android:summaryOff="@string/pref_light_up_screen_off" />
    <CheckBoxPreference android:layout="@layout/_ics_custom_checkbox_preference_layout" android:title="@string/pref_unlock_screen" android:key="@string/pref_unlock_screen_for_popup_key" android:dependency="@string/pref_popup_enabled_key" android:defaultValue="@string/pref_unlock_screen_for_popup_default" android:summaryOn="@string/pref_unlock_screen_on" android:summaryOff="@string/pref_unlock_screen_off" />
    <CheckBoxPreference android:layout="@layout/_ics_custom_checkbox_preference_layout" android:title="@string/pref_outgoing_messages_sounds" android:key="@string/pref_outgoing_messages_sounds_key" android:defaultValue="@string/pref_outgoing_messages_sounds_default" />
    <CheckBoxPreference android:layout="@layout/_ics_custom_checkbox_preference_layout" android:title="@string/pref_use_system_ringtone" android:key="@string/pref_use_system_ringtone_key" android:defaultValue="@string/pref_use_system_ringtone_default" />
    <RingtonePreference android:layout="@layout/_ics_custom_checkbox_preference_layout" android:title="@string/pref_call_ringtone" android:key="@string/pref_call_ringtone_key" android:dependency="@string/pref_use_system_ringtone_key" android:ringtoneType="ringtone" android:showDefault="true" android:showSilent="false" />
    <RingtonePreference android:layout="@layout/_ics_custom_checkbox_preference_layout" android:title="@string/pref_notification_sound" android:key="@string/pref_notification_sound_key" android:dependency="@string/pref_use_system_ringtone_key" android:defaultValue="content://settings/system/notification_sound" android:ringtoneType="notification" android:showDefault="true" android:showSilent="true" />
    <CheckBoxPreference android:layout="@layout/_ics_custom_checkbox_preference_layout" android:visible="false" android:title="@string/pref_vibrate_when_ringing" android:key="@string/pref_vibrate_when_ringing_key" android:defaultValue="@string/pref_vibrate_when_ringing_default" />
</PreferenceScreen>