<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:cacheColorHint="#00000000"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:layout="@layout/_ics_custom_checkbox_preference_layout" android:title="@string/pref_pixie_mode_title" android:key="@string/pref_pixie_mode_key" android:summary="@string/pref_pixie_mode_summary" />
    <CheckBoxPreference android:layout="@layout/_ics_custom_checkbox_preference_layout" android:title="@string/pref_notification_icon_2_1_5" android:key="@string/pref_notification_icon_key" android:defaultValue="@string/pref_notification_icon_default" />
    <CheckBoxPreference android:layout="@layout/_ics_custom_checkbox_preference_layout" android:title="@string/pref_contact_show_all" android:key="@string/pref_contact_show_all_key" android:defaultValue="@string/pref_contact_show_all_default" />
    <CheckBoxPreference android:layout="@layout/_ics_custom_checkbox_preference_layout" android:title="@string/dialog_sync_accounts_enable_title" android:key="@string/pref_account_and_sync_key" android:defaultValue="@string/pref_account_and_sync_default" android:summaryOn="@string/pref_account_and_sync_on" android:summaryOff="@string/pref_account_and_sync_off" />
    <CheckBoxPreference android:layout="@layout/_ics_custom_checkbox_preference_layout" android:title="@string/pref_language" android:key="@string/pref_language_key" android:defaultValue="@string/pref_language_default" android:summaryOn="@string/pref_language_summary_on" android:summaryOff="@string/pref_language_summary_off" />
</PreferenceScreen>