<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:paddingLeft="16.0dip" android:paddingTop="20.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.viber.voip.widget.AvatarView android:id="@id/img_icon" android:layout_width="@dimen/create_public_group_icon_size" android:layout_height="@dimen/create_public_group_icon_size" android:src="@drawable/add_vibe_icon_selector" app:caption="@string/public_group_info_data_add_icon_mandatory_caption" app:captionVisible="true" app:captionTextSize="20.0dip" app:captionTextColor="@color/add_vibe_icon_text_color_selector" app:mandatory="true" />
        <com.viber.voip.widget.TextViewWithDescription android:description="@string/public_group_info_data_description_name_your_vibe_mandatory" android:id="@id/txt_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="16.0dip" android:hint="@string/name_your_vibe_hint" android:maxLength="28" android:layout_toRightOf="@id/img_icon" android:layout_alignBottom="@id/img_icon" android:inputType="textCapSentences" android:imeOptions="actionPrevious" />
        <com.viber.voip.widget.HListWithDescription android:description="@string/public_group_info_data_description_participants" android:gravity="top" android:id="@id/participants" android:paddingTop="16.0dip" android:fadingEdge="horizontal" android:fadingEdgeLength="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="16.0dip" android:listSelector="@*android:color/transparent" android:cacheColorHint="#fff3f3f3" android:layout_below="@id/img_icon" android:requiresFadingEdge="horizontal" />
        <com.viber.voip.widget.TextViewWithDescription android:description="@string/public_group_info_data_description_about" android:id="@id/txt_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="16.0dip" android:hint="@string/about_vibe_hint" android:maxLength="120" android:layout_below="@id/participants" android:inputType="textCapSentences" />
        <com.viber.voip.widget.TextViewWithDescription android:description="@string/public_group_info_data_description_tags" android:id="@id/txt_tags" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="16.0dip" android:hint="@string/tags_vibe_hint" android:layout_below="@id/txt_description" android:inputType="textVisiblePassword|textAutoComplete|textNoSuggestions" />
        <com.viber.voip.widget.TextViewWithDescription android:description="@string/public_group_info_data_description_location_mandatory" android:id="@id/txt_location" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="16.0dip" android:hint="@string/add_vibe_location_hint" android:layout_below="@id/txt_tags" android:inputType="textNoSuggestions" />
        <com.viber.voip.widget.TextViewWithDescription android:description="@string/public_group_info_data_description_id_mandatory" android:id="@id/txt_uri" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="16.0dip" android:hint="@string/vibe_id_hint" android:maxLength="28" android:layout_below="@id/txt_location" android:inputType="textVisiblePassword|textNoSuggestions" />
        <com.viber.voip.widget.TextViewWithDescription android:description="@string/public_group_info_data_description_background_image" android:id="@id/txt_background" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="16.0dip" android:hint="@string/vibe_background_hint" android:layout_below="@id/txt_uri" />
        <com.viber.voip.ui.ViberButton android:id="@id/btn_create_group" android:paddingLeft="40.0dip" android:paddingRight="40.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="28.0dip" android:text="@string/done" android:layout_below="@id/txt_background" android:layout_centerHorizontal="true" />
        <com.viber.voip.ui.ViberTextView android:textSize="12.0sp" android:textColor="@color/learn_more_text_selector" android:id="@id/btn_learn_more" android:paddingTop="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_below="@id/btn_create_group" android:layout_centerHorizontal="true" />
    </RelativeLayout>
</ScrollView>