<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/_ics_ic_ab_search" android:id="@id/menu_search" android:orderInCategory="1" android:title="@string/menu_search" android:showAsAction="ifRoom|collapseActionView" android:actionViewClass="com.actionbarsherlock.widget.SearchView" />
    <item android:icon="@drawable/_ics_ic_ab_compose" android:id="@id/menu_compose_1to1" android:orderInCategory="2" android:title="@string/btn_msg_compose" android:showAsAction="always" />
    <item android:icon="@drawable/_ics_ic_ab_compose_group" android:id="@id/menu_compose_group" android:orderInCategory="3" android:title="@string/btn_msg_compose_group" android:showAsAction="always" />
    <item android:icon="@drawable/ic_menu_more" android:id="@id/menu_more_options" android:orderInCategory="4" android:title="@string/more_options" android:showAsAction="always" />
</menu>